# wsq-courseware-generator-claude-streamlit

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  QUICK_START.md  README.md  README_HF.md  add_activities_to_pptx.py  app.py  build_combined.py  fly.toml  packages.txt  pyproject.toml  render.yaml  requirements.txt  switch_account.py
.skills/: add_assessment_to_ap.md  branding.md  check_documents.md  generate_ap_fg_lg_lp.md  generate_assessment.md  generate_assessment_plan.md  generate_brochure.md  generate_course_proposal.md  generate_courseware.md  generate_facilitator_guide.md  generate_learner_guide.md  generate_lesson_plan.md  generate_slides.md
.streamlit/: config.toml
add_assessment_to_ap/: annex_assessment.py  annex_assessment_v2.py
chainlit_app/: app.py
chainlit_modules/: annex_assessment.py  assessment.py  brochure.py  check_documents.py  course_proposal.py  courseware.py  settings.py  slides.py
check_documents/: acra_call.py  gemini_processor.py  sup_doc.py
common/: common.py  company_manager.py  prompt_loader.py
company/: company_manager.py  company_settings.py  database.py
convert_assessment/: convert_assessment.py
courseware_agents/: __init__.py  assessment_agent.py  assessment_generator.py  base.py  brochure_agent.py  content_generator_agent.py  courseware_agent.py  cp_agent.py  cp_interpreter.py  document_agent.py  entity_extractor.py  infographic_agent.py  mcp_config.py  mcp_tools_server.py  orchestrator.py  research_agent.py  run_mcp_server.py  schemas.py  slides_agent.py  timetable_agent.py
courseware_audit/: audit_agent.py  gemini_processor.py  sup_doc.py
docs/: app.js  index.html  style.css
extract_course_info/: extract_course_info.py
generate_ap_fg_lg/: courseware_generation.py
generate_ap_fg_lg_lp/: courseware_generation.py  lesson_plan_generation.py
generate_assessment/: __init__.py  assessment_generation.py
generate_cp/: app.py  cv_main.py  (+2 more)
(+180 files in other folders)
