[project]
name = "courseware-generator"
version = "0.1.0"
description = "WSQ Courseware Generator - AI-powered training material generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Streamlit (UI Framework)
    "streamlit>=1.30.0",
    "streamlit-option-menu",
    "streamlit-modal",

    # Data Processing
    "pydantic>=2.0.0",
    "pandas",
    "openpyxl",

    # Document Generation & Processing
    "python-docx",
    "docxtpl",
    "docxcompose",
    "pypdf2",
    "pymupdf",
    "pillow",
    "jinja2",

    # Web & Network
    "requests",
    "beautifulsoup4",

    # Browser Automation (brochure)
    "playwright",

    # Database
    "psycopg2-binary",
    "python-dotenv",

    # AI Processing
    "claude-agent-sdk",

    # NotebookLM (slide generation)
    "notebooklm-py[browser]",
]
